# p4a-tiltify-stats

./: .gitignore  Generate Wordcloud.ipynb  PollStatistics.ipynb  RunStats.ipynb  original-minus-atom.xcf  original-white-text-minus-atom.xcf  original-white-text.xcf  original.xcf  pyproject.toml
.github/workflows/: run_polls.yml  run_stats.yml
