[tool.poetry]
name = "p4a-tiltify-stats"
version = "0.1.0"
description = ""
authors = ["Mikuláš Poul <git@mikulaspoul.cz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^1.4.1"
requests = "^2.27.1"
pygsheets = "^2.0.5"

[tool.poetry.dev-dependencies]
Pillow = "^9.0.1"
matplotlib = "^3.5.1"
wordcloud = "^1.8.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
